# simple-render-modern-opengl

./: CMakeLists.txt  README.md  display.cpp  display.h  main.cpp  modern_gl  remake.sh  shaders.cpp  shaders.h
res/: basicShader.fs
